manifests/deployment-front.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: azure-vote-front-Critique
  namespace: vote
spec:
  replicas: 1
  selector:
    matchLabels:
      app: azure-vote-front-Critique
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  minReadySeconds: 5 
  template:
    metadata:
      labels:
        app: azure-vote-front-Critique
    spec:
      containers:
      - name: azure-vote-front-Critique
        image: standardsIMG.azurecr.io/vote-front:latest
        ports:
        - containerPort: 80
        resources:
          requests:
            cpu: 250m
          limits:
            cpu: 500m
---
apiVersion: v1
kind: Service
metadata:
  name: azure-vote-front-Critique
spec:
  type: LoadBalancer
  ports:
  - port: 80
  selector:
    app: azure-vote-front-Critique
