manifests/networkPolicy-K8SFormat.yml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  namespace: vote
  name: deny-from-other-namespaces
spec:
  podSelector:
    matchLabels:
      app: azure-vote-front
  ingress:
  - {}
