manifests/networkpolicy.yml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  namespace: vote
  name: deny-from-other-namespaces
spec:
  podSelector:
    matchLabels:
        app: azure-vote-front
  PolicyTypes:
  - Ingress
  ingress:
  - from:
      - ipBlock:
        cidr: 10.0.0.0/16
    ports:
    - protocol: TCP
      port: 80
